--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"/>
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet"/>
+    <link rel="stylesheet" href="style.css">
+    
   </head>
   <body>
     <div class="mainContent">
@@ -23,7 +25,7 @@
         <p class="title">iPhone x</p>
         <p class="subTitle">Dile hola al futuro.</p>
       </div>
-      <img src="images/iphone_x_large.jpg" class="imgApple">
+      <img src="images/iphone_x_large.png" class="imgApple">
     </div>
     <div class="appleContent backgroundContentApple"></div>
     <h1 style="background-color:	#B00E23;">
@@ -31,7 +33,7 @@
         <p style="color: white" class="title">iPhone 8 (PRODUCT)red</p>
         <p class="subTitle">Todo lo que haces, lo puedes hacer mejor.</p>
       </div>
-      <img src="images/iphone_red.jpg" class="imgApple">
+      <img src="images/iphone_red.png" class="imgApple">
     </h1>
   </body>
 </html>
