--- a/ipad.html
+++ b/ipad.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"/>
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet"/>
+    <link rel="stylesheet" href="style.css">
+    
   </head>
   <body>
     <div class="mainContent">
@@ -23,31 +25,31 @@
         <p class="title">iPad</p>
         <p class="subTitle">Es como una computadora, pero como ninguna otra computadora.</p>
       </div>
-      <img src="images/hero_large.jpg" class="imgApple">
+      <img src="images/hero_large.png" class="imgApple">
     </div>
     <div class="appleContent backgroundContentApple">
       <div class="ipadTexts">
         <p class="title">iPad Pro</p>
         <p class="subTitle">Todo lo que haces, lo puedes hacer mejor.</p>
       </div>
-      <img src="images/ipad_pro_large.jpg" class="imgApple">
+      <img src="images/ipad_pro_large.png" class="imgApple">
     </div>
     <div class=" contentItemiPad contain">
       <div class="itemIpad">
         <p class="subTitleItemIpad">Apple Pencil</p>
-        <img src="images/pencil_large.jpg" class="itemIpadImg">
+        <img src="images/pencil_large.png" class="itemIpadImg">
       </div>
       <div class="itemIpad">
-        <img src="images/smart_keyboard_large.jpg" class="itemIpadImg">
+        <img src="images/smart_keyboard_large.png" class="itemIpadImg">
         <p class="subTitleItemIpad">Smart Keyboard para el iPad Pro</p>
       </div>
     </div>
     <div class="contain modelsIpad">
-      <img src="images/compare_ipad_large.jpg" class="itemIpadImg">
+      <img src="images/compare_ipad_large.png" class="itemIpadImg">
       <p class="subTitleItemIpad">Compara Los modelos de iPad</p>
     </div>
     <div class="contain imgImgBackiPad">
-      <img src="./images/ar_large.jpg" alt="" class="imgback">
+      <img src="./images/ar_large.png" alt="" class="imgback">
       <div class="textsImgBackiPad imgbackRigth">
         <p class="textsImgBackiPadTitle imgbackWhite">Realidad aumentada</p>
         <p class="textsImgBackiPadSubtitle imgbackWhite">Un mundo nuevo a tu alrededor.</p>
@@ -55,7 +57,7 @@
       </div>
     </div>
     <div class="contain imgImgBackiPad">
-      <img src="./images/ios11_do_more_large.jpg" class="imgback ">
+      <img src="./images/ios11_do_more_large.png" class="imgback ">
       <div class="textsImgBackiPad imgbackLeft">
         <p class="textsImgBackiPadTitle imgbackBlack">Haz aún más en el iPad con iOS 11.</p>
         <p class="textsImgBackiPadParagraph imgbackBlack">Echa un vistazo a estos videos cortos que muestran cómo tu iPad y tú pueden hacer aún más con iOS 11. Descubre consejos útiles sobre cómo usar el nuevo Dock, la optimizada funcionalidad multitarea, la práctica app Archivos y más.</p>
@@ -69,14 +71,14 @@
       </div>
     </div>
     <div class="contain imgImgBackiPad">
-      <img src="./images/families_large.jpg" class="imgback">
+      <img src="./images/families_large.png" class="imgback">
       <div class="textsImgBackiPad imgbackLeft">
         <p class="textsImgBackiPadTitle imgbackWhite">Tú quieres lo mejor para tu familia, nosotros también.</p>
         <p class="textsImgBackiPadParagraph imgbackWhite">En Apple estamos constantemente desarrollando nuevas funcionalidades para asegurarnos de que tus hijos usen sus dispositivos como tú quieres que lo hagan.</p>
       </div>
     </div>
     <div class="contain imgImgBackiPad">
-      <img src="./images/business_large.jpg" class="imgback">
+      <img src="./images/business_large.png" class="imgback">
       <div class="textsImgBackiPad imgbackCenter">
         <p class="textsImgBackiPadTitle imgbackWhite">iPad para la empresa</p>
         <p class="textsImgBackiPadParagraph imgbackWhite">Cuando descubras todas las capacidades del iPad, tu forma de trabajar cambiará para siempre.</p>
