--- a/iphone.html
+++ b/iphone.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"/>
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet"/>
+    <link rel="stylesheet" href="style.css">
+    
   </head>
   <body>
     <div class="mainContent">
@@ -23,16 +25,16 @@
         <p class="title">iPhone X</p>
         <p class="subTitle">Dile hola al futuro.</p>
       </div>
-      <img src="images/iphone_x_large.jpg" class="imgApple">
+      <img src="images/iphone_x_large.png" class="imgApple">
     </div>
     <div class="contain imgImgBackiPad imgBackItem iPhoneComparate">
-      <img src="images/compare_large2.jpg" class="itemIpadImg">
+      <img src="images/compare_large2.png" class="itemIpadImg">
       <div class=" imgbackRigth cityiPhoneText">
         <p class="textsImgBackiPadTitle imgbackBlack">Compara los modelos de iPhone.</p>
       </div>
     </div>
     <div class="contain imgImgBackiPad">
-      <img src="./images/ar_large2.jpg" alt="">
+      <img src="./images/ar_large2.png" alt="">
       <div class="textsImgBackiPad imgbackRigth">
         <p class="textsImgBackiPadTitle imgbackBlack">Realidad aumentada</p>
         <p class="textsImgBackiPadSubtitle imgbackBlack">Un mundo nuevo a tu alrededor.</p>
@@ -44,29 +46,29 @@
         <p class="textsImgBackiPadTitle imgbackBlack">Un gran paso para el iPhone.</p>
         <p class="textsImgBackiPadParagraph imgbackBlack">Con iOS 11, tu iPhone se vuelve tan inteligente que aprende de ti todos los días. Es tan poderoso que te ayuda de una forma aún más personal. Y tan capaz que es más eficiente que nunca.</p>
       </div>
-      <img src="images/ios_large.jpg" class="itemIpadImg">
+      <img src="images/ios_large.png" class="itemIpadImg">
     </div>
     <div class="contain imgImgBackiPad imgBackItem  airpot">
       <div class=" imgbackRigth cityiPhoneText">
         <p class="textsImgBackiPadTitle imgbackBlack">Sin cables y sin esfuerzo. Como por arte de magia</p>
-      </div><img src="images/airpods_alt_large.jpg" class="itemIpadImg">
+      </div><img src="images/airpods_alt_large.png" class="itemIpadImg">
     </div>
     <div class="contain imgImgBackiPad imgBackItem cityiPhone">
       <div class=" imgbackRigth cityiPhoneText">
         <p class="textsImgBackiPadTitle imgbackBlack">El mejor lugar para todas tus fotos, archivos y mucho más.</p>
         <p class="textsImgBackiPadParagraph imgbackBlack">Todos los dispositivos Apple vienen con iCloud, para que tu contenido esté siempre protegido, actualizado y a mano dondequiera que estés.</p>
       </div>
-      <img src="images/promo_tile_icloud_large.jpg" class="itemIpadImg">
+      <img src="images/promo_tile_icloud_large.png" class="itemIpadImg">
     </div>
     <div class="contain imgImgBackiPad">
-      <img src="./images/families_large.jpg" class="imgback">
+      <img src="./images/families_large.png" class="imgback">
       <div class="textsImgBackiPad imgbackLeft">
         <p class="textsImgBackiPadTitle imgbackWhite">Tú quieres lo mejor para tu familia, nosotros también.</p>
         <p class="textsImgBackiPadParagraph imgbackWhite">En Apple estamos constantemente desarrollando nuevas funcionalidades para asegurarnos de que tus hijos usen sus dispositivos como tú quieres que lo hagan.</p>
       </div>
     </div>
     <div class="contain imgImgBackiPad">
-      <img src="./images/business_addit_large.jpg" class="imgback ">
+      <img src="./images/business_addit_large.png" class="imgback ">
       <div class="textsImgBackiPad imgbackLeft">
         <p class="textsImgBackiPadTitle imgbackWhite">El iPhone en la empresa</p>
       </div>
