--- a/mac.html
+++ b/mac.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"/>
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet"/>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="mainContent">
@@ -24,28 +25,28 @@
         <p class="title">iMac Pro</p>
         <p class="subTitle">Más poder para los pro.</p>
       </div>
-      <img src="images/imac_pro_01_large_2x.jpg" class="imgApple">
+      <img src="images/imac_pro_01_large_2x.png" class="imgApple">
     </h1>
     <div class="appleContent backgroundContentApple">
       <div class="ipadTexts">
         <p class="title">MacBook Pro</p>
         <p class="subTitle">Una experiencia cada vez más brillante.</p>
       </div>
-      <img src="images/imac_large_2x.jpg" class="imgApple">
+      <img src="images/imac_large_2x.png" class="imgApple">
     </div>
     <div class="appleContent backgroundContentApple">
       <div class="ipadTexts">
         <p class="title">MacBook Pro</p>
         <p class="subTitle">Un toque de genialidad.</p>
       </div>
-      <img src="images/macbookpro_tb_large_2x.jpg" class="imgApple">
+      <img src="images/macbookpro_tb_large_2x.png" class="imgApple">
     </div>
     <div class="appleContent backgroundContentApple">
       <div class="ipadTexts">
         <p class="title">MacBook</p>
         <p class="subTitle">El futuro es ligero.</p>
       </div>
-      <img src="images/macbook_large.jpg" class="imgApple">
+      <img src="images/macbook_large.png" class="imgApple">
     </div>
   </body>
 </html>
