--- a/mac.html
+++ b/mac.html
@@ -16,7 +16,7 @@
         <a href="./mac.html" class="textMain">Mac</a>
         <a href="./ipad.html" class="textMain">iPad</a>
         <a href="./iphone.html" class="textMain">iPhone</a>
-        <a href="./watch.html" class="textMain">Watch</a>
+        <!-- <a href="./watch.html" class="textMain">Watch</a> -->
       </div>
     </div>
     <div class="appleContent backgroundContentApple"></div>
