--- a/iphone.html
+++ b/iphone.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"/>
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet"/>
     <link rel="stylesheet" href="style.css">
-    
+
   </head>
   <body>
     <div class="mainContent">
@@ -17,7 +17,7 @@
         <a href="./mac.html" class="textMain">Mac</a>
         <a href="./ipad.html" class="textMain">iPad</a>
         <a href="./iphone.html" class="textMain">iPhone</a>
-        <a href="./watch.html" class="textMain">Watch</a>
+        <!-- <a href="./watch.html" class="textMain">Watch</a> -->
       </div>
     </div>
     <div class="appleContent backgroundContentApple contentPhoneOne">
